# AutonomousCar

./: CMakeLists.txt  README.md  package.xml
autonomous_car/: CMakeLists.txt  README.md  package.xml
autonomous_car/launch/: base_controller_test.launch  display.launch  odometry_test.launch
autonomous_car/rviz/: urdf.rviz
autonomous_car/src/actions/: navigation.action
autonomous_car/src/nodes/: actionServer.py  base_controller.py  fake_moveBase.py  odom_publisher.py  odometry_driver_test.py
autonomous_car/urdf/: robotCar.urdf
launch/: amcl.launch  base_controller.launch  base_controller_test.launch  control_test.launch  display.launch  localization.launch  map_discretizer.launch  move_base.launch  navigation.launch  odometry_test.launch  test.launch
maps/: IST_map_b_w_scale_bigger.yaml  IST_map_disc.yaml  IST_map_disc_bigger.pgm  IST_map_disc_bigger.yaml  blank.pgm
param/: costmap_common.yaml
param/robotics_lab2/: local_planner.yaml  planner.yaml
param/teb_local_planner_tutorials/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_test.yaml
robotics_lab2/: package.xml
robotics_lab2/launch/: amcl.launch  base_controller_test.launch  display.launch  localization.launch  map_discretizer.launch  move_base.launch  navigation.launch  odometry_test.launch  simulation.launch  test.launch  turtlebot3_localization.launch  turtlebot3_nav_sim.launch  turtlebot3_navigation.launch
robotics_lab2/maps/: IST_map_b_w_scale.yaml  IST_map_disc.pgm  IST_map_disc.yaml  blank.yaml  disc_map.pgm  disc_map.yaml  disc_map_room.pgm  disc_map_room.yaml  disc_map_sim.pgm  disc_map_sim.yaml  room.pgm  room.yaml  sim.pgm  sim.yaml
robotics_lab2/param/: costmap_common_params_waffle_pi.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
robotics_lab2/rviz/: my_amcl.rviz  test_aut_car.rviz  test_g_t_c.rviz  urdf.rviz
robotics_lab2/src/: grid_to_states.py  map_discretization.py  mdp.py  mdp_new.py  move_square.py  navigation_goals.py  navigation_goals_cells.py
robotics_lab2/src/nodes/: base_controller.py  odom_publisher.py  odometry_driver_test.py  tf_listener.py
robotics_lab2/src/used/: odom_publisher.py
robotics_lab2/urdf/: aut_car.urdf  robotCar.urdf
rviz/: test_aut_car.rviz  test_car_sized_cells.rviz  test_mp3.rviz  urdf.rviz
src/: base_controller.py  energy_management.py  events.py  grid_to_states_copy.py  map_discretization.py  navigation_goals.py  occupancy_listener.py  odom_publisher.py
src/nodes/: actionClient.py  actionServer  joint_publisher.py  joint_subscriber.py  tf_broadcaster.py  tf_listener.py
urdf/: aut_car.urdf  robotCar.urdf
