<package format="2">
  <name>autonomous_car</name>
  <version>0.0.0</version>

  <description>This package contains the simulation of an Autonomous Car</description>
  <author email="isartjulia@gmail.com">Isart Julià</author>
  <author email="nikki_ris@hotmail.com">Veronica Spelbrink</author>
  <author email="tzathaspet@gmail.com">Petros Tzathas</author>
  <maintainer email="isartjulia@gmail.com">Isart Julià</maintainer>
  <maintainer email="nikki_ris@hotmail.com">Veronica Spelbrink</maintainer>
  <maintainer email="tzathaspet@gmail.com">Petros Tzathas</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nav_msg</build_depend>


  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>nav_msg</build_export_depend>


  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>nav_msg</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
